Arreglado modulos de polizas individuales y colectivos, beneficiario, vehiculo, riesgo diverso, recibo y email

--- a/src/views/collectives.ejs
+++ b/src/views/collectives.ejs
@@ -38,8 +38,9 @@
                             <th>Fecha desde</th>
                             <th>Fecha hasta</th>
                             <th>Moneda</th>
-                            <th>Prima</th>
-                            <th>Estatus</th>
+                            <th>Prima Neta</th>
+                            <th>IGTF</th>
+                            <th>Prima Total</th>
                             <th>Detalle</th>
                             <th>Editar</th>
                             <th>Deshabilitar</th>
@@ -57,8 +58,9 @@
                             <th>Fecha desde</th>
                             <th>Fecha hasta</th>
                             <th>Moneda</th>
-                            <th>Prima</th>
-                            <th>Estatus</th>
+                            <th>Prima Neta</th>
+                            <th>IGTF</th>
+                            <th>Prima Total</th>
                             <th>Detalle</th>
                             <th>Editar</th>
                             <th>Deshabilitar</th>
@@ -145,8 +147,9 @@ $(document).ready(function(){
             {"data": "fecha_desde_colectivo"},
             {"data": "fecha_hasta_colectivo"},
             {"data": "tipo_moneda_colectivo"},
-            {"data": "prima_anual_colectivo"},
-            {"data": "estatus_colectivo"},
+            {"data": "prima_neta_colectivo"},
+            {"data": "igtf_colectivo"},
+            {"data": "prima_total_colectivo"},
             {
                 "data": "",
                 "render": (data, type, row) => {
