--- a/src/views/editRiskDiverse.ejs
+++ b/src/views/editRiskDiverse.ejs
@@ -48,7 +48,7 @@
                                                 name="cedula_riesgo_diverso"
                                                 id="cedula_riesgo_diverso"
                                                 value="<%= riskDiverse.cedula_riesgo_diverso %>" 
-                                                class="form-control cedula"
+                                                class="form-control input-cedula"
                                             >
                                         </div>
                                     </div>
@@ -104,7 +104,7 @@
                                                 name="suma_asegurada_riesgo_diverso"
                                                 id="suma_asegurada_riesgo_diverso"
                                                 value="<%= sumaAsegurada %>" 
-                                                class="form-control number_format"
+                                                class="form-control input-cedula"
                                                 required
                                             >
                                         </div>
