--- a/src/views/layouts/footerWizardForm.ejs
+++ b/src/views/layouts/footerWizardForm.ejs
@@ -1646,7 +1646,7 @@
 </script>
 
 
-<% if (typeof(policy) !== 'undefined') { %>
+<% if (Object.keys(policy).length !== 0) { %>
     <script>
         var policy = <%- JSON.stringify(policy) %>;
         function dateAutomation() {
