--- a/src/views/apPolicyForm.ejs
+++ b/src/views/apPolicyForm.ejs
@@ -460,7 +460,7 @@
                             <form id="receipt-form-ap" action="/sistema/add-ap-receipt" method="POST">
                                 <div class="row">
                                     <div class="col-lg-6">
-                                        <% if (typeof(policy) !== 'undefined') { %>
+                                        <% if (Object.keys(policy).length !== 0) { %>
                                             <div class="form-group">
                                                 <div class="form-group row"><label class="col-sm-4 col-form-label">Número Póliza</label>
                                                     <div class="col-sm-8">
@@ -579,7 +579,7 @@
                                         </div>
                                     </div>
                                     <div class="col-lg-6">
-                                        <% if (typeof(policy) !== 'undefined') { %>
+                                        <% if (Object.keys(policy).length !== 0) { %>
                                             <div class="form-group">
                                                 <div class="form-group row"><label class="col-sm-4 col-form-label">Prima Neta</label>
                                                     <div class="col-sm-8">
