--- a/src/views/funeralPolicyForm.ejs
+++ b/src/views/funeralPolicyForm.ejs
@@ -584,7 +584,7 @@
                             <form id="receipt-form-funeral" action="/sistema/add-funeral-receipt" method="POST">
                                 <div class="row">
                                     <div class="col-lg-6">
-                                        <% if (typeof(policy) !== 'undefined') { %>
+                                        <% if (Object.keys(collective).length !== 0) { %>
                                             <div class="form-group">
                                                 <div class="form-group row"><label class="col-sm-4 col-form-label">Número Póliza</label>
                                                     <div class="col-sm-8">
@@ -703,7 +703,7 @@
                                         </div>
                                     </div>
                                     <div class="col-lg-6">
-                                        <% if (typeof(policy) !== 'undefined') { %>
+                                        <% if (Object.keys(collective).length !== 0) { %>
                                             <div class="form-group">
                                                 <div class="form-group row"><label class="col-sm-4 col-form-label">Prima Neta</label>
                                                     <div class="col-sm-8">
