--- a/src/views/layouts/footer.ejs
+++ b/src/views/layouts/footer.ejs
@@ -120,54 +120,35 @@
 </script>
 
 <script>
-    var separador = document.getElementsByClassName('number_format');
-    for (var i = 0 ; i < separador.length; i++) {
-        separador[i].addEventListener('input', (e) => {
-            var entrada = e.target.value.split(','),
-            parteEntera = entrada[0].replace(/\./g, ''),
-            parteDecimal = entrada[1],
-            salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
-            e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : '');
-        }, false); 
-    } 
-</script>
-
-<script>
-    var separador = document.getElementsByClassName('cedula_rif');
-    for (var i = 0 ; i < separador.length; i++) {
-        separador[i].addEventListener('input', (e) => {
-            var entrada = e.target.value.split(',');
-            var parteEntera = entrada[0].replace(/\./g, '');
-            var salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
-            if ((salida.charAt(0) === 'J') || (salida.charAt(0) === 'G') || (salida.charAt(0) === 'V')) {
-                var parteRif = entrada[0];
-                e.target.value = parteRif;
-            } else {
-                e.target.value = salida;
-            }
-        }, false); 
-    }
+    $('.input-cedula').toArray().forEach(function(field) {
+        new Cleave(field, {
+            numeral: true,
+            numeralDecimalMark: ',',
+            delimiter: '.'
+        });
+    });
 </script>
 
 <% if (typeof(naturalInsureds) !== 'undefined') { %>
     <script>
         var naturalInsureds = <%- JSON.stringify(naturalInsureds) %>;
         function pasarNombreAseguradoConductor() {
-            var cedulaConductor = document.getElementById("cedula_conductor_vehiculo").value;
-            for (let i = 0; i < naturalInsureds.length; i++) {
-                let elementNaturalInsured = naturalInsureds[i];
-                if (cedulaConductor.match(/^\d/)) {
-                    if (cedulaConductor === elementNaturalInsured.cedula_asegurado_per_nat) {
-                        document.getElementById("nombre_conductor_vehiculo").value = elementNaturalInsured.nombre_asegurado_per_nat + ' ' + elementNaturalInsured.apellido_asegurado_per_nat;
-                        break;
-                    } else {
-                        document.getElementById("nombre_conductor_vehiculo").value = '';
-                    }
-                } else if (cedulaConductor.startsWith('')) {
+        var cedulaConductor = document.getElementById("cedula_conductor").value;
+        var selectBox3 = document.getElementById("select_box3").value;
+        for (let i = 0; i < naturalInsureds.length; i++) {
+            let elementNaturalInsured = naturalInsureds[i];
+            if (cedulaConductor.match(/^\d/)) {
+                if ((selectBox3 === elementNaturalInsured.tipo_cedula_asegurado_per_nat) && (cedulaConductor === elementNaturalInsured.cedula_asegurado_per_nat)) {
+                    document.getElementById("nombre_conductor_vehiculo").value = elementNaturalInsured.nombre_asegurado_per_nat + ' ' + elementNaturalInsured.apellido_asegurado_per_nat;
+                    break;
+                } else {
                     document.getElementById("nombre_conductor_vehiculo").value = '';
                 }
+            } else if (cedulaConductor.startsWith('')) {
+                document.getElementById("nombre_conductor_vehiculo").value = '';
             }
         }
+    }
     </script>
 <% } %>
 
