--- a/src/views/layouts/footerExtraWizardForm.ejs
+++ b/src/views/layouts/footerExtraWizardForm.ejs
@@ -1809,7 +1809,7 @@
     }
 </script>
 
-<% if (typeof(policy) !== 'undefined') { %>
+<% if (Object.keys(policy).length !== 0) { %>
     <script>
         var policy = <%- JSON.stringify(policy) %>;
         function dateAutomation() {
