--- a/src/views/travelPolicyForm.ejs
+++ b/src/views/travelPolicyForm.ejs
@@ -444,7 +444,7 @@
                             <form id="receipt-form-travel" action="/sistema/add-travel-receipt" method="POST">
                                 <div class="row">
                                     <div class="col-lg-6">
-                                        <% if (typeof(policy) !== 'undefined') { %>
+                                        <% if (Object.keys(policy).length !== 0) { %>
                                             <div class="form-group">
                                                 <div class="form-group row"><label class="col-sm-4 col-form-label">Número Póliza</label>
                                                     <div class="col-sm-8">
@@ -563,7 +563,7 @@
                                         </div>
                                     </div>
                                     <div class="col-lg-6">
-                                        <% if (typeof(policy) !== 'undefined') { %>
+                                        <% if (Object.keys(policy).length !== 0) { %>
                                             <div class="form-group">
                                                 <div class="form-group row"><label class="col-sm-4 col-form-label">Prima Neta</label>
                                                     <div class="col-sm-8">
